version/0.11/_sources/examples/postprocessor/doc_postproc_ep_simulation.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\postprocessor\doc_postproc_ep_simulation.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_postprocessor_doc_postproc_ep_simulation.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_postprocessor_doc_postproc_ep_simulation.py:


Post process EP simulation
--------------------------
This example shows you how to post process an EP simulation.

.. GENERATED FROM PYTHON SOURCE LINES 30-33

Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules

.. GENERATED FROM PYTHON SOURCE LINES 33-51

.. code-block:: Python



    import pathlib

    from ansys.heart.core.post.dpf_utils import EPpostprocessor

    # set ep results folder
    ep_folder = (
        pathlib.Path.home()
        / "pyansys-heart"
        / "downloads"
        / "Strocchi2020"
        / "01"
        / "FourChamber"
        / "simulation-EP"
        / "main-ep"
        / "d3plot"
    )

.. GENERATED FROM PYTHON SOURCE LINES 55-58

Instantiate the Postprocessor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
instantiate Postprocessor

.. GENERATED FROM PYTHON SOURCE LINES 58-62

.. code-block:: Python


    postproc = EPpostprocessor(results_path=ep_folder)



.. GENERATED FROM PYTHON SOURCE LINES 63-66

12-LEAD ECGs
~~~~~~~~~~~~~~~~
Plot 12-Lead ECGs

.. GENERATED FROM PYTHON SOURCE LINES 66-74

.. code-block:: Python


    path_to_ecg_file = ep_folder.parent / "em_EKG_001.dat"

    ECGs, times = postproc.read_ECGs(path_to_ecg_file)


    ECGs12 = postproc.compute_12_lead_ECGs(ECGs=ECGs, times=times, plot=True)


.. GENERATED FROM PYTHON SOURCE LINES 75-78

.. image:: /_static/images/ep_post_12LeadECGs.png
  :width: 300pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 80-83

Activation times
~~~~~~~~~~~~~~~~
Get activation times and plot the field

.. GENERATED FROM PYTHON SOURCE LINES 83-86

.. code-block:: Python


    activation_time_field = postproc.get_activation_times()
    activation_time_field.plot(show_edges=False)

.. GENERATED FROM PYTHON SOURCE LINES 87-90

.. image:: /_static/images/ep_post_activationtime.png
  :width: 300pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 90-96

.. code-block:: Python


    # Compute total activation time
    activation_time_data = activation_time_field.data_as_list
    total_acctivation_time = max(activation_time_data) - min(activation_time_data)
    print("Total activation time: " + str(total_acctivation_time) + " ms")


.. GENERATED FROM PYTHON SOURCE LINES 97-100

Transmembrane potentials
~~~~~~~~~~~~~~~~~~~~~~~~
Get transmembrane potentials on list of nodes and plot

.. GENERATED FROM PYTHON SOURCE LINES 100-101

.. code-block:: Python

    vm, times = postproc.get_transmembrane_potential(node_id=[0, 1, 100], plot=True)

.. GENERATED FROM PYTHON SOURCE LINES 102-105

.. image:: /_static/images/ep_tm.png
  :width: 300pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 105-109

.. code-block:: Python


    # Animate and export in vtk format
    postproc.export_transmembrane_to_vtk()
    postproc.animate_transmembrane()


.. _sphx_glr_download_examples_postprocessor_doc_postproc_ep_simulation.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: doc_postproc_ep_simulation.ipynb <doc_postproc_ep_simulation.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: doc_postproc_ep_simulation.py <doc_postproc_ep_simulation.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: doc_postproc_ep_simulation.zip <doc_postproc_ep_simulation.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
